--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/material": "^13.3.3",
+    "@angular/material-moment-adapter": "^13.3.4",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
